@@ -32,8 +32,9 @@ function [h, varargin, narg] = __plt_get_axis_arg__ (caller, varargin)
 
   ## Figure handles are integers, but object handles are non integer,
   ## therefore ignore integer scalars.
-  if (nargin > 1 && length (varargin) > 0 && numel(varargin{1}) == 1
-      && ishandle (varargin{1}(1)) && ! isfigure (varargin{1}(1)))
+  if (nargin > 1 && length (varargin) > 0 && isnumeric (varargin{1}) 
+      && numel (varargin{1}) == 1 && ishandle (varargin{1}(1)) 
+      && varargin{1}(1) != 0 && ! isfigure (varargin{1}(1)))
     tmp = varargin{1};
     obj = get (tmp);
     if (strcmp (obj.type, "axes") || strcmp (obj.type, "hggroup"))
