@@ -79,6 +79,7 @@ function comet (varargin)
 endfunction
 
 %!demo
+%! close all;
 %! t = 0:.1:2*pi;
 %! x = cos(2*t).*(cos(t).^2);
 %! y = sin(2*t).*(sin(t).^2);
